deployments/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: llm-chat-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: llm-chat-app
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: llm-chat-app
    spec:
      containers:
        - resources: {}
          terminationMessagePath: /dev/termination-log
          name: llm-chat-app
          command:
            - python
          ports:
            - containerPort: 8501
              protocol: TCP
          imagePullPolicy: IfNotPresent
          terminationMessagePolicy: File
          image: 'image-registry.openshift-image-registry.svc:5000/test-app/example:v0.7'
          args:
            - '-m'
            - streamlit
            - run
            - app.py
            - '--server.port=8501'
            - '--server.address=0.0.0.0'
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
