deployments/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: llm-chat-app
  labels:
    app: llm-chat-app
spec:
  to:
    kind: Service
    name: llm-chat-app
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
